feat: Add Google Analytics and update date generation
Integrates Google Analytics tracking code into the index.html to enable website analytics.
Updates the `generateRecentDate` function in `constants.ts` to use the current date as a base instead of a fixed future date, ensuring more realistic relative timestamps.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <meta property="twitter:description" content="Sua fonte de notícias sobre música e esportes, com análises, resumos por IA, playlists, podcasts e muito mais." />
     <meta property="twitter:image" content="https://public-rf-upload.minhawebradio.net/249695/ad/1ccbd4ef8fcc652a7e0c5c0e6215d5ae.jpeg" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L911V8HBWB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-L911V8HBWB');
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
