refactor: Update project metadata and SEO
This commit updates the project name, description, and associated metadata to accurately reflect the application's focus on sports news. It also refines SEO tags and keywords in the `index.html` to be more specific to sports content, removing references to music. Additionally, minor code cleanups and comments were added for improved clarity in ad loading logic.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="https://public-rf-upload.minhawebradio.net/249695/ad/1ccbd4ef8fcc652a7e0c5c0e6215d5ae.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RADIO520.COM.BR - Música e Esportes com Análise e IA</title>
+    <title>RADIO520.COM.BR - Esportes com Análise e IA</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="RADIO520.COM.BR é sua fonte de notícias sobre música e esportes, com análises, resumos por IA, playlists, podcasts e as últimas novidades do mundo do entretenimento." />
-    <meta name="keywords" content="música, esportes, notícias, futebol, lançamentos, rádio, podcast, radio520, ia, gemini" />
+    <meta name="description" content="RADIO520.COM.BR é sua fonte de notícias sobre esportes, com análises, resumos por IA, players de áudio e vídeo e as últimas novidades do mundo do entretenimento." />
+    <meta name="keywords" content="esportes, notícias, futebol, f1, nba, rádio, podcast, radio520, ia, gemini, google adds" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://radio520.com.br/" />
-    <meta property="og:title" content="RADIO520.COM.BR - Música e Esportes com Análise e IA" />
-    <meta property="og:description" content="Sua fonte de notícias sobre música e esportes, com análises, resumos por IA, playlists, podcasts e muito mais." />
+    <meta property="og:title" content="RADIO520.COM.BR - Esportes com Análise e IA" />
+    <meta property="og:description" content="Sua fonte de notícias sobre esportes, com análises, resumos por IA, players de áudio e vídeo e muito mais." />
     <meta property="og:image" content="https://public-rf-upload.minhawebradio.net/249695/ad/1ccbd4ef8fcc652a7e0c5c0e6215d5ae.jpeg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://radio520.com.br/" />
-    <meta property="twitter:title" content="RADIO520.COM.BR - Música e Esportes com Análise e IA" />
-    <meta property="twitter:description" content="Sua fonte de notícias sobre música e esportes, com análises, resumos por IA, playlists, podcasts e muito mais." />
+    <meta property="twitter:title" content="RADIO520.COM.BR - Esportes com Análise e IA" />
+    <meta property="twitter:description" content="Sua fonte de notícias sobre esportes, com análises, resumos por IA, players de áudio e vídeo e muito mais." />
     <meta property="twitter:image" content="https://public-rf-upload.minhawebradio.net/249695/ad/1ccbd4ef8fcc652a7e0c5c0e6215d5ae.jpeg" />
 
     <!-- Google tag (gtag.js) -->
